kv: add get objects by prefix
