# kv/api/controller.go
@@ -25,8 +25,10 @@ func New(kvStore kv.Service, sbac *sbac.Service) Controller {
 }
 
 func (controller *controller) RegisterRoutes(router *gin.Engine) {
-	router.GET("/api/kv/:label", controller.GetByLabel)
-	router.GET("/api/kv/:label/version-id", controller.GetVersionIDByLabel)
+	router.GET("/api/kv/label/:label", controller.GetByLabel)
+	router.GET("/api/kv/prefix/:prefix", controller.GetByPrefix)
+	router.GET("/api/kv/label/:label/version-id", controller.GetVersionIDByLabel)
+	router.GET("/api/kv/prefix/:prefix/version-id", controller.GetVersionIDByPrefix)
 }
 
 // GetByLabel Retrieves a key by its value
@@ -41,7 +43,7 @@ func (controller *controller) RegisterRoutes(router *gin.Engine) {
 // @Failure 400 {object} api.Error
 // @Failure 404 {object} api.Error
 // @Failure 500 {object} api.Error
-// @Router /api/kv/{label} [get]
+// @Router /api/kv/label/{label} [get]
 func (controller *controller) GetByLabel(c *gin.Context) {
 	label := c.Param("label")
 	obj, status, err := controller.service.Get(label)
@@ -50,6 +52,29 @@ func (controller *controller) GetByLabel(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, ObjectResponse{Object: obj})
+}
+
+// GetByPrefix Retrieves objects matching a key prefix
+// @Summary See before
+// @Description See before
+// @ID getByPrefix
+// @Accept json
+// @Produce json
+// @Tags kv
+// @Param prefix path string true "prefix"
+// @Success 200 {object} api.ObjectListResponse
+// @Failure 400 {object} api.Error
+// @Failure 404 {object} api.Error
+// @Failure 500 {object} api.Error
+// @Router /api/kv/prefix/{prefix} [get]
+func (controller *controller) GetByPrefix(c *gin.Context) {
+	prefix := c.Param("prefix")
+	ls, status, err := controller.service.GetByPrefix(prefix)
+	if err != nil {
+		c.JSON(status, Error{err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, ObjectListResponse{Pairs: ls})
 }
 
 // GetVersionIDByLabel Retrieves a version ID by its value
@@ -64,7 +89,7 @@ func (controller *controller) GetByLabel(c *gin.Context) {
 // @Failure 400 {object} api.Error
 // @Failure 404 {object} api.Error
 // @Failure 500 {object} api.Error
-// @Router /api/kv/{label}/version-id [get]
+// @Router /api/kv/label/{label}/version-id [get]
 func (controller *controller) GetVersionIDByLabel(c *gin.Context) {
 	label := c.Param("label")
 	versionID, status, err := controller.service.GetVersionID(label)
@@ -73,4 +98,28 @@ func (controller *controller) GetVersionIDByLabel(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, VersionIDResponse{VersionID: versionID})
+}
+
+// GetVersionIDByPrefix Retrieves version IDs matching a prefix
+// @Summary See before
+// @Description see before
+// @ID getVersionIDbyPrefix
+// @Accept json
+// @Produce json
+// @Tags kv
+// @Param prefix path string true "prefix"
+// @Success 200 {object} api.VersionIDListResponse
+// @Failure 400 {object} api.Error
+// @Failure 404 {object} api.Error
+// @Failure 500 {object} api.Error
+// @Router /api/kv/prefix/{prefix}/version-id [get]
+func (controller *controller) GetVersionIDByPrefix(c *gin.Context) {
+	prefix := c.Param("prefix")
+	versionIDs, status, err :=
+		controller.service.GetVersionIDByPrefix(prefix)
+	if err != nil {
+		c.JSON(status, Error{err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, VersionIDListResponse{Pairs: versionIDs})
 }
